<resources>
    <string name="app_name">Flora and Fauna</string>
    <string name="app_greeting">Welcome at flora and fauna Application</string>
    <string name="load_text">wait for a while</string>
    <string name="text_right">© | All rights are Reserved | 2022</string>
    <string name="dashboard_greeting">Choose to Explore Flora and Fauna</string>
    <string name="dashboardFloraBtn">Explore Flora In Uttarakhand</string>
    <string name="dashboardFaunaBtn">Explore Fauna in Uttarakhand</string>
    <string name="dashboardRight">Dashboard | Flora And Fauna</string>
    <string name="floraIntro">Traditionally, the mountains in the lower regions of Uttarakhand were covered with moist deciduous forest. Between elevations of 1,500 to 3,000m, the major natural vegetation entails of Pine, Oak, Rhododendron, Walnut and Larch. Below the snow line, the vegetation consists of forests of Spruce, Fir, Cypress, Juniper and Birch, while above the snow line (in the higher altitude of the State) is Alpine vegetation which includes Mosses, Lichen and a diversity of wildflowers such as Blue Poppies and Edelweiss.</string>
    <string name="nameBF">Brahma Kamal</string>
    <string name="nameRF">Rhododendron Burans (Buransh)</string>
    <string name="namePF">Pine Tree</string>
    <string name="nameBPF">Blue Poppy</string>
    <string name="nameDesBF">Saussurea Obvallata</string>
    <string name="nameDesRF">Rhododendron Arboreum Sm</string>
    <string name="nameDesPF">Pinus roxburghii</string>
    <string name="nameDesBPF">MECONOPSIS ACULEATA</string>
    <string name="btnF">READ MORE</string>
    <string name="nameVF">Valley Of Flowers</string>
    <string name="nameDesVF">One of the Famous Tourist Spot\'s</string>
    <string name="nameDashBoardFRights">Dashboard | Flora</string>
    <string name="faunaIntro">As a result of deforestation, much of the original fauna of the Himalayas are restricted to protected areas and sanctuaries. Major fauna in the region are Himalayan Bear, Musk Deer, the wild Goat Ghoral, Bharal or Blue Goat, Wolves, Snow Leopards and varieties of deer such as Barking Deer. Avifauna in the region is regarded as one of the richest in the sub-continent, with over 500 species of birds.</string>
    <string name="nameMFa">Musk Deer</string>
    <string name="nameMoFa">Monal Bird</string>
    <string name="nameTFa">Tiger</string>
    <string name="nameEFa">Elephant</string>
    <string name="nameJFa">Jim Corbett National Park</string>
    <string name="nameDashBoardFaRights">Dashboard | Fauna</string>
    <string name="acMuskTitle">The Alpine Musk Deer</string>
    <string name="muskContent">The Alpine musk deer is the state animal of Uttarakhand. It is also known by Kasturi Mirg or Himalayan Musk Deer. This Alpine deer is found in coniferous and deciduous forests of Himalayan regions on the heights of 3000 to 5000 meters. Due to drastically hunting, it has become an endangered species. However, hunting of this deer is illegal. Scientific Name of The Alpine Musk Deer is Moschus chrysogaster.</string>
    <string name="acMonalTitle">Monal Bird</string>
    <string name="MonalContent">The Himalayan monal (Lophophorus impejanus), also known as the Impeyan monal and Impeyan pheasant, is a pheasant native to Himalayan forests and shrublands at elevations of 2,100–4,500 m (6,900–14,800 ft). It is part of the family Phasianidae and is listed as Least Concern on the IUCN Red List. It is the national bird of Nepal, where it is known as the danphe or danfe, and state bird of Uttarakhand, India, where it is known as monal. Himalayan Monal which features in the \'red\' category of International Union for Conservation of Nature (IUCN) list, is facing a threat due to rampant degradation and disturbance of its habitat. In Uttarakhand, the birds are currently found in grassy slopes above the treeline, primarily in Chopta, Munsyari, Kedarnath Wildlife Sanctuary, Pindari and Dodital area of Uttarkashi.</string>
    <string name="acTigerTitle">Tiger</string>
    <string name="TigerContent">Uttarakhand is land to a number of Tigers in the country. Probably having the 2nd highest number of Tigers in Uttarakhand, there are some very popular Tiger Reserves in Uttarakhand. It is estimated that there is an approx number of 250 to 300 tigers in all the Tiger Reserves of Uttarakhand. Tiger population in Uttarakhand has risen from 227 to 340 since the last census, becoming the second State in the country after Karnataka with the highest number of tigers. “There has been an encouraging rise in tiger population in Uttarakhand. Currently Uttarakhand have 3 active Tiger reserves -: Corbett National Park, Kalagarh Tiger Reserve, Rajaji Tiger Reserve, and 2 more will be open soon named Nandhaur Wildlife Sanctuary and Surai range of Terai East.</string>
    <string name="acElephantTitle">Elephant</string>
    <string name="ElephantContent">Asian Elephant (Elephas maximus) is a threatened mammal species only second to its African cousin in size amongst all land mammals. Its status as per IUCN red list is endangered and it is placed in the appendix I of CITES. In Uttarakhand last direct count was conducted in the year 2007 which resulted in a count of 1346 elephants. Later in the year 2012, Asian nature conservation foundation, innovation centre at the Indian Institute of Sciences, Bangalore led by Dr R. Sukumar conducted elephant estimation in the state through dung decay method. This method was labour intensive involving high costs. Shiwalik Elephant reserve is the only Elephant reserve in the state of Uttarakhand.</string>
    <string name="acJimCorbett">Jim Corbett National Park</string>
    <string name="JimCorbettContent">Jim Corbett National Park, which is a part of the larger Corbett Tiger Reserve, a Project Tiger Reserve lies in the Nainital district of Uttarakhand. The magical landscape of Corbett is well known and fabled for its tiger richness. Established in the year 1936 as Hailey National Park, Corbett has the glory of being India\'s oldest and most prestigious National Park. It is also being honored as the place where Project Tiger was first launched in 1973. This unique tiger territory is best known as the father who gave birth of the Project Tiger in India to protect the most endangered species and the Royal of India called Tigers. Spans over an extent of 520 square kilometers, its whole area comprises of hills, marshy depressions, riverine belts, grasslands and large lake. It is among the few tiger reserves in India that allows overnight stays in the lap of the National Park. Nature watch and wildlife viewing in the park is done in an open four wheeler Jeep and on elephant back. Sheltering a healthy population of tigers and rare species like Otters and the endemic fish eating crocodile, the national park is one of the most sought after destinations for the wildlife buffs. Dhikala, situated at the border of the extensive Patil Dun valley, is the most popular destination.</string>
    <string name="BrahmaKamalContent">Brahma Kamal, also known as Saussurea Obvallata, belongs to the thistle tribe of flowering plants. Interestingly, this flower blooms only one night in a year, and that too, after sunset. It takes two hours or so for it to bloom fully to 8 inches in diameter. It is grown exclusively in Uttarakhand state in April-May and October. Brahma Kamal has been named after Brahma, the deity who created the universe. It is also called the King of Himalayan Flowers. It is also the state flower of Uttarakhand.</string>
    <string name="BMedicinalUse">The Brahma Kamalam flower has been used for centuries to treat several ailments. It is said to possess many medicinal properties. It improves memory, treats insomnia, increases concentration levels, strengthens immune system, enhances digestion, boosts metabolism used to treat constipation, cleanses blood, heals skin disorder, simulates hair growth, used to treat cough and cold, clears sinuses. The fragrance of Brahma Kamal is used in perfumery industries and in aromatherapy. It helps reduce stress, calms down nerves, and reduces anxiety.</string>
    <string name="BFacts">For the believers, they are an auspicious and wish-fulfilling nature. Brahma Kamal is offered in several holy shrines of Uttarakhand like Kedarnath, Badrinath and Tunganath. It blooms only in a few homes and is a harbinger of luck and prosperity in such places. It is believed that whoever prays to get any wish fulfilled while the flower is blooming will get the desire fulfilled. It is a local belief that Brahmakamal should be always gifted. It should not be sold or bought from anywhere.Some natives of Uttarakhand believe that Brahma Kamal protects its owner from evil eyes and bad influences. Others believe that this is the flower cherished by divine beings.</string>
    <string name="RContent">The onset of spring brings a beautiful cheer in Uttarakhand. And the cheer is justified with the refreshing weather at this time of the year and the blooming of the alluring rhododendrons. Burans (Buransh), which goes by the common name Rhododendron and scientific name Rhododendron Arboreum Sm. It is the State Tree of Uttarakhand and it is blooming is one of the most surreal wonders that you can witness in Uttarakhand.  Rhododendron has been derived from two Greek words Rhod meaning rosy red and dendron meaning tree. The name perfectly symbolizes the red flowers of the rhododendron trees. About Rhododendron Arboreum Burans or Rhododendron is an evergreen tree that grows up to the height of 20 m and has rough and pinkish-brown bark. The brightly colored flowers deep red to pink which bloom from late winter till early summer are the highlight of this tree. The months from January to March marks the blooming season of Burans in Uttarakhand.</string>
    <string name="RMedicinal">Medicinal Uses - As Burans has antioxidant, anti-inflammatory, and hepatoprotective properties, it is widely used in traditional medicines. Almost all the parts of Rhododendron are medicinal and used in a variety of ways to treat many ailments. Young leaves of Burans are applied to the forehead during headaches to treat it. The bark and flowers are used to treat digestive and respiratory ailments. Burans have excellent antioxidant, antiinflammatory, and antidiabetic properties making it not just appealing to the eye but potent for health too. Burans is considered good for heart, liver, diabetes, and is used for treating diarrhea. it is also considered good for the skin.</string>
    <string name="RFacts">Latest Findings about Rhododendron Flowers regarding Covid A group of biologists at Indian Institute of Technology (IIT) Mandi has claimed to have stumbled upon a Himalayan flowering tree possessing antiviral properties with a potential to be used in the treatment against SARS-CoV2. Their study was published in the journal Biomolecular Structure and Dynamics. "The cells infected with SARS-Cov2 virus, when subjected to this specially prepared Buransh flower extract in a dose dependent manner, were kept under an incubation of 48 hours. It was found that the viral multiplication was affected. At a concentration of 1 mg/ml, nearly 80 per cent inhibition was achieved," said Masakapalli, Associate Professor of BioX Centre at IIT-Mandi. Date: 19 Jan 2022 </string>
</resources>