<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_greeting"
        android:textSize="30sp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:padding="20sp"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="250sp"
        app:lottie_rawRes="@raw/flora_file_1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDashboardFlora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboardFloraBtn"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:padding="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="#061255"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="250sp"
        app:lottie_rawRes="@raw/animal_file_2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDashboardFauna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboardFaunaBtn"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:padding="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="#061255"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboardRight"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:textColor="#CDCDCD"
        />

</LinearLayout>