<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FloraActivity"
    android:background="@drawable/background_fauna"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollFlora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/IntroText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faunaIntro"
                android:background="#051363"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:padding="20sp"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                />

            <GridLayout
                android:id="@+id/gridFlora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="1"
                android:rowCount="3">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10sp"
                    app:cardCornerRadius="10sp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#F6DFEB">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10sp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="200sp"
                            android:layout_height="200sp"
                            android:src="@drawable/musk_deer_cover"
                            android:contentDescription="Musk Deer"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="5sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/nameMFa"
                                android:textAlignment="center"
                                android:layout_gravity="center"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:padding="10sp"
                                />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/BtnMusk"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:padding="15sp"
                                android:layout_marginTop="20sp"
                                android:background="#061255"
                                android:text="@string/btnF"
                                android:textAlignment="center"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginLeft="5sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10sp"
                    app:cardCornerRadius="10sp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#F6DFEB">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10sp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="200sp"
                            android:layout_height="200sp"
                            android:src="@drawable/monal_bird"
                            android:contentDescription="Rhododendron"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="5sp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/nameMoFa"
                                android:textAlignment="center"
                                android:layout_gravity="center"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:padding="10sp"
                                />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/BtnMonal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:padding="15sp"
                                android:layout_marginTop="10sp"
                                android:background="#061255"
                                android:text="READ MORE"
                                android:textAlignment="center"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginLeft="5sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10sp"
                    app:cardCornerRadius="10sp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#F6DFEB">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10sp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="200sp"
                            android:layout_height="200sp"
                            android:src="@drawable/tiger"
                            android:contentDescription="Pine"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="5sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nameTFa"
                                android:textAlignment="center"
                                android:layout_gravity="center"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:padding="10sp"
                                />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/BtnTiger"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:padding="15sp"
                                android:layout_marginTop="10sp"
                                android:background="#061255"
                                android:text="READ MORE"
                                android:textAlignment="center"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginLeft="5sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10sp"
                    app:cardCornerRadius="10sp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#F6DFEB">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10sp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="200sp"
                            android:layout_height="200sp"
                            android:src="@drawable/elephant"
                            android:contentDescription="Blue Poppy Cover"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="5sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nameEFa"
                                android:textAlignment="center"
                                android:layout_gravity="center"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:padding="10sp"
                                />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/BtnElephant"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:padding="15sp"
                                android:layout_marginTop="10sp"
                                android:background="#061255"
                                android:text="READ MORE"
                                android:textAlignment="center"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginLeft="5sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10sp"
                    app:cardCornerRadius="10sp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#F6DFEB">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10sp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="200sp"
                            android:layout_height="200sp"
                            android:src="@drawable/jim_corbett"
                            android:contentDescription="Valley Of Flowers"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="5sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nameJFa"
                                android:textAlignment="center"
                                android:layout_gravity="center"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:padding="10sp"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nameDesVF"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:layout_gravity="center"
                                android:padding="10sp"
                                android:textSize="14sp"
                                android:layout_marginTop="5sp"/>

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/BtnJimCorbett"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:padding="15sp"
                                android:layout_marginTop="10sp"
                                android:background="#061255"
                                android:text="READ MORE"
                                android:textAlignment="center"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginLeft="5sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameDashBoardFaRights"
                android:textColor="#CDCDCD"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>